Tue Jun  4 23:08:42 2013  Benoit Daloze  <eregontp@gmail.com>

	* ext/objspace/objspace.c: improve wording and remove duplicated comment.
	  Based on a patch by Dave Goodchild. [Fixes GH-299]

Tue Jun  4 18:41:47 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bitlength_bdigit): Fix an off-by-one error.

Tue Jun  4 15:30:00 2013  Kenta Murata  <mrkn@cookpad.com>

	* ext/bigdecimal/lib/bigdecimal/util.rb (Float#to_d): fix the number
	  of figures.  Patch by Vipul A M <vipulnsward@gmail.com>.
	  https://github.com/ruby/ruby/pull/323  fix GH-323

	* test/bigdecimal/test_bigdecimal_util.rb: fix for the above change.

Tue Jun  4 00:44:27 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/fileutils/test_fileutils.rb (TestFileUtils#test_mkdir): add
	  EEXIST for Linux. (suggested by nurse)

Mon Jun  3 23:58:19 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* lib/fileutils.rb (FileUtils.rmdir): use remove_tailing_slash.
	* test/fileutils/test_fileutils.rb: test for above.

Mon Jun  3 23:47:55 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bitlength_bdigit): New function.
	  (rb_big_pow): Use bitlength_bdigit instead of ffs.

Mon Jun  3 23:11:19 2013  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* lib/fileutils.rb: fix behavior when mkdir/mkdir_p accepted "/".
	* test/fileutils/test_fileutils.rb: add test for above change.
	  Patched by Mitsunori Komatsu. [GH-319]

Mon Jun  3 19:02:20 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (is_hfs): use the file descriptor instead of a path.

Mon Jun  3 07:15:17 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: removes AC_CHECK_FUNCS(readdir_r). readdir_r()
	  is only used from dir.c and it doesn't need readdir_r().
	* configure.in (SIZEOF_STRUCT_DIRENT_TOO_SMALL): removed. It is
	  only used for readdir_r.
	* dir.c: removes NAME_MAX_FOR_STRUCT_DIRENT. It is not right way
	  to detect maximum length of path len. POSIX require to use
	  fpathconf(). IOW, it might have lead to make a vulnerability